--- a/src/index.tmpl.html
+++ b/src/index.tmpl.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
